Fix spacing

--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -13,7 +13,7 @@ img {
 h1 {
   color: white;
   display: inline-block;
-  margin-top: 250px;
+  margin-top: 220px;
   margin-right: 180px;
   font-family: 'Lobster', cursive;
   text-align: center;
